RESOLVED FIXED258326
input type=tel test case fail in css/selectors/dir-pseudo-on-input-element.html
https://bugs.webkit.org/show_bug.cgi?id=258326
Summary input type=tel test case fail in css/selectors/dir-pseudo-on-input-element.html
Ahmad Saleem
Reported 2023-06-20 15:23:59 PDT
Hi Team, I think we special cased 'telephone' directionality [1] in the past but now we fail the WPT test: [1] https://commits.webkit.org/252779@main >> (WebCore::HTMLElement::computeDirectionality const): Added a special case for telephone. [2] https://commits.webkit.org/254017@main ^ This modified the above function but still had the 'telephone' cases, which we still have. Live Link: http://wpt.live/css/selectors/dir-pseudo-on-input-element.html It started failing with latest WPT import: https://commits.webkit.org/258889@main So I think either we need to remove special casing or we missed bit and need to fix it. Just raising so we can fix this failing test as well. Thanks!
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-21 11:22:26 PDT
Ryosuke Niwa
Comment 2 2023-06-24 01:27:22 PDT
EWS
Comment 3 2023-06-24 19:27:49 PDT
Committed 265500@main (1f2d2a92eeb8): <https://commits.webkit.org/265500@main> Reviewed commits have been landed. Closing PR #15273 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.