input type=tel test case fail in css/selectors/dir-pseudo-on-input-element.html https://bugs.webkit.org/show_bug.cgi?id=258326

Reviewed by Tim Nguyen.

The bug was caused by the missing :dir rule to force direction: ltr on input[type=tel] when there isn't
a valid dir content attribute specified on the element as well as the lack of style invalidation when
input element's type changes. This patch fixes both problems.

* LayoutTests/imported/w3c/web-platform-tests/css/selectors/dir-pseudo-on-input-element-expected.txt:
* LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/css/selectors/dir-pseudo-on-input-element-expected.txt:
* Source/WebCore/css/html.css:
(input[type=tel i]:dir(ltr)):
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::updateTextDirectionalityAfterTelephoneInputTypeChange):
* Source/WebCore/html/HTMLElement.h:
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::updateType):

Canonical link: https://commits.webkit.org/265500@main